<resources>
    <string name="app_name">C19 Meter</string>
    <string name="by_z3t4z00k">By Z3T4Z00K</string>
    <string name="title_activity_dashboard">dashboard</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="c19_nmeter">C19\nMeter</string>
    <string name="total_cases">Total Cases</string>
    <string name="_10_000">25,148</string>
    <string name="_1_000_new_cases_today">1,000 new cases today</string>
    <string name="recent">Recent</string>
    <string name="cases">Cases</string>
    <string name="recoveries">Recoveries</string>
    <string name="deaths">Deaths</string>
    <string name="top_states">Top States</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="gujarat">Gujarat</string>
    <string name="delhi">Delhi</string>
    <string name="latest_advisories">Latest Advisories</string>
    <string name="sample_headline_1">Lakshadweep: Regulation on movement of passengers from islands to mainlands</string>
    <string name="sample_date_1">2020–04–15</string>
    <string name="view_more">View more</string>
    <string name="sample_headline_2">Sikkim: Notification for statewide lockdown.</string>
    <string name="sample_date_2">2020–04–15</string>
    <string name="sample_headline_3">Andhra Pradesh: Instructions in order to prevent COVID-19 (Corona Virus) in the State.</string>
    <string name="sample_date_3">2020–04–04</string>
    <string name="sample_headline_4">Tamil Nadu: Notification for statewide lockdown.</string>
    <string name="sample_date_4">2020–04–01</string>
    <string name="sample_headline_5">Ladakh: Restrictions on air services.</string>
    <string name="sample_date_5">2020–03–31</string>
    <string name="_10498">10498</string>
    <string name="_3515">3515</string>
    <string name="_4395">4395</string>
    <string name="national">National Stats</string>
    <string name="blank" />
    <string name="view_all">View all</string>
    <string name="next">Next</string>
    <string name="covid_19_dashboard">COVID-19 Dashboard</string>
    <string name="with_the_c19_meter_you_get_all_the_latest_figures_and_advisories_at_a_glance_directly_from_the_govt_of_india">With the C19 Meter, you get all the latest figures and advisories at a glance, directly from the Govt. of India.</string>
    <string name="detailed_report">Detailed Report</string>
    <string name="get_the_most_updated_stats_in_detail_with_their_growth_patterns_statewise">Get the most updated stats in detail, with their growth patterns, statewise</string>
    <string name="back">Back</string>
    <string name="figures_are_being_reconciled_with_icmr">*figures are being reconciled with ICMR</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="title_activity_maps">Map</string>
    <string name="total">Total Cases: </string>
    <string name="cured">Cured:</string>
    <string name="deaths2">Deaths:</string>
    <string name="loading">Loading</string>
    <string name="nbsp_with_nbsp"> with </string>
    <string name="in">in</string>
    <string name="by">by</string>
    <string name="z3t4z00k">Z3T4Z00K</string>
    <string name="nation_wide_data">Nation wide data</string>
    <string name="check_the_status_of_a_state_interactively_through_maps">Check the status of a state interactively through maps.</string>
    <string name="read_more">Read more</string>
    <string name="state_wise_list">States</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_statewise">state-wise</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="sep">|</string>
    <string name="state">State</string>
    <string name="death2">Death</string>
    <string name="cured2">Cured</string>
    <string name="total2">Total</string>
    <string name="title_activity_myth_busters">MythBusters</string>
    <string name="active_cases">(Active cases)</string>
    <string name="view_map">View Map</string>
    <string name="myth_busters">Myth Busters</string>
    <string name="myth1">Cold weather and snow CANNOT kill the CoronaVirus .</string>
    <string name="myth2">Hand dryers are NOT effective in killing the coronavirus.</string>
    <string name="myth3">There is NO evidence that regularly rinsing the nose with saline has protected people from infection with the coronavirus.</string>
    <string name="myth4">The coronavirus CAN be transmitted in areas with hot and humid climates.</string>
    <string name="myth5">Ultraviolet light SHOULD NOT be used for sterilization and can cause skin irritation.</string>
    <string name="myth6">Garlic is healthy but there is NO evidence from the current outbreak that eating garlic has protected people from the coronavirus.</string>
    <string name="myth7">The coronavirus CANNOT be transmitted through mosquito bites.</string>
    <string name="myth8">Thermal scanners CAN detect if people have a fever but CANNOT detect whether or not someone has the coronavirus.</string>
    <string name="myth9">Antibiotics DO NOT work against viruses, antibiotics only work against bacteria.</string>
    <string name="myth10">There is NO evidence that companion animals/pets such as dogs or cats can transmit the coronavirus.</string>
    <string name="myth11">Spraying alcohol or chlorine all over your body WILL NOT kill viruses that have already entered your body.</string>
    <string name="myth12">To date, there is NO specific medicine recommended to prevent or treat the coronavirus.</string>
    <string name="myth13">Taking a hot bath DOES NOT prevent the coronavirus.</string>
    <string name="myth14">Vaccines against pneumonia, such as pneumococcal vaccine and Haemophilus influenzae type b (Hib) vaccine, DO NOT provide protection against the coronavirus.</string>
    <string name="totals">Totals</string>
    <string name="district_wise_distribution">District-wise Distribution</string>
    <string name="district">District</string>
    <string name="_100_days">Growth / day (last 14 days)</string>
    <string name="view_on_map">View on map</string>
    <string name="zone_info">View Zone Info</string>
    <string name="title_activity_zone">Zone</string>
    <string name="color">Zone</string>
    <string name="title_activity_resources">Resources</string>
    <string name="tab_text_1">Testing</string>
    <string name="tab_text_2">Food</string>
    <string name="tab_text_3">Funds</string>
    <string name="tab_text_4">Hospital</string>
    <string name="tab_text_5">Delivery</string>
    <string name="resources">Resources</string>
    <string name="tab_text_6">Helpline</string>
    <string name="tab_next_7">Kitchen</string>
    <string name="tab_next_8">Others</string>
    <string name="city">City</string>
    <string name="organization">Organization:</string>
    <string name="loadSign">...</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
</resources>
