<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    android:translationZ="10dp"
    android:background="@drawable/rounded_corners_5_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_top_5"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:theme="@style/subTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/locContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/orgHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization"
            android:theme="@style/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadSign"
            android:theme="@style/body"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/orgHead"
            app:layout_constraintTop_toTopOf="@id/orgHead"/>

        <TextView
            android:id="@+id/desHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:theme="@style/title"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/org"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadSign"
            android:theme="@style/body"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/desHead"
            app:layout_constraintTop_toTopOf="@id/desHead"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/conContainer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_corners_bottom_5"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/infoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:text="@string/website"
            android:textAllCaps="false"
            android:theme="@style/extraWhite"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/pho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:theme="@style/extraWhite"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>